--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <h1 id="main-heading"> Stevan Stojanović Mokranjac</h1>
 
-        <p>Stevan Stojanović Mokranjac (January 9, 1856–1914) was a Serbian composer and music educator.
+        <p>Stevan Stojanović Mokranjac (<i>January 9, 1856–1914</i>) was a Serbian composer and music educator.
          His work was essential in bringing the spirit of Valach Serbian unwritten folk poems into organized art.</p>
 
 
     <h2>Biography</h2>
 
-        <p>He was born in Negotin. From the birthplace of his parents he drew the second last name Mokranjac (literally: resident of Mokranje).</p>
+        <p>He was born in Negotin. From the birthplace of his parents he drew the second last name Mokranjac (<i>literally: resident of Mokranje</i>).</p>
 
         <p>He graduated from the Belgrade high school, and attended the natural science and mathematics section of the University of Belgrade. 
         In 1879 he traveled to Munich where he studied music in the class of Josef Rheinberger. After a brief break, he continued to study in Rome
@@ -22,28 +22,28 @@
          Belgrade.</p>
 
         <p>From 1885 to 1887 he studied music in Leipzig, Germany. Upon his return to Serbia in 1887 he became the conductor of the Belgrade
-        singing society (Belgrade Choir). From 1887 to 1900 he taught music at the Belgrade high school, and in 1901 transferred to 
-        Bogoslovija (Belgrade Theological College) where he taught church singing. Together with Stanislav Binički and Cvetko Manojlović, 
+        singing society (<i>Belgrade Choir</i>). From 1887 to 1900 he taught music at the Belgrade high school, and in 1901 transferred to 
+        Bogoslovija (<i>Belgrade Theological College</i>) where he taught church singing. Together with Stanislav Binički and Cvetko Manojlović, 
         Mokranjac founded the first independent music school in 1899 - Serbian Music School in Belgrade. He remains the director of this 
         school until his death. Today the school bears his name. His work as a melograph bore many transcriptions of thus far unwritten folk 
         songs.</p>
 
-        <p>Stevan Mokranjac died in Skopje, Macedonia (then Kingdom of Serbia), aged 58.</p>
+        <p>Stevan Mokranjac died in Skopje, Macedonia (<i>then Kingdom of Serbia</i>), aged 58.</p>
 
-        <p>Every year, the town of Negotin organizes a music festival in his honor called Mokranjčevi dani (Days of Mokranjac). The town also
+        <p>Every year, the town of Negotin organizes a music festival in his honor called Mokranjčevi dani (<i>Days of Mokranjac</i>). The town also
          has a Mokranjac museum.</p>
 
 
     <h2>Works</h2>
 
         <p>His life was highly influenced by church and folk songs, and he used these two types of music as inspiration for his work. His most
-             famous pieces are the fifteen Rukoveti (Potpourri; literally: "handfuls" or "bunches") - a collection of songs and music (orchestral 
-             suites) based on motives of Serbian folk music from Bosnia and Herzegovina, Serbia Proper, Montenegro, Kosovo and Metohija, Macedonia 
-             and Bulgaria. His other prominent folk-based works include Primorski napjevi (Coastland tunes), and Kozar.</p>
+             famous pieces are the fifteen Rukoveti (<i>Potpourri; literally: "handfuls" or "bunches"</i>) - a collection of songs and music (<i>orchestral 
+                suites</i>) based on motives of Serbian folk music from Bosnia and Herzegovina, Serbia Proper, Montenegro, Kosovo and Metohija, Macedonia 
+             and Bulgaria. His other prominent folk-based works include Primorski napjevi (<i>Coastland tunes</i>), and Kozar.</p>
 
-        <p>A significant number of his works were made for church services. Such as the Božanstvena Liturgija Svetog Jovana Zlatoustog (The Divine
-             Liturgy of St. Chrysostom), from which the Heruvimska pesma (Cherubic hymn) is most famous. Another two famous religious pieces are 
-             Tebe Boga hvalim (Te Deum) and Veličanije Sv. Savi (Megalynarion to St. Sava).</p>
+        <p>A significant number of his works were made for church services. Such as the Božanstvena Liturgija Svetog Jovana Zlatoustog (<i>The Divine
+            Liturgy of St. Chrysostom</i>), from which the Heruvimska pesma (<i>Cherubic hymn</i>) is most famous. Another two famous religious pieces are 
+             Tebe Boga hvalim (<i>Te Deum</i>) and Veličanije Sv. Savi (<i>Megalynarion to St. Sava</i>).</p>
 
 
     <h2>Compositions</h2>
@@ -53,10 +53,10 @@
         <ul>
             <li>Statija treća</li>
             <li>Tebe pojem</li> 
-            <li>Aliluja (Alleluia after the Cherubikon)</li> 
-            <li>Aliluja (Alleluia after the Trisagion)</li> 
+            <li>Aliluja (<i>Alleluia after the Cherubikon</i>)</li> 
+            <li>Aliluja (<i>Alleluia after the Trisagion</i>)</li> 
             <li>Budi imja Gospodnje</li> 
-            <li> Cherubic Hymn (Heruvimska pesma)</li>
+            <li>Cherubic Hymn (<i>Heruvimska pesma</i>)</li>
             <li>Dve pesme na veliki petak</li> 
             <li>Akatist</li> 
             <li>Opelo</li> 
